add 02-blog-page.html & 02-blogs.html

--- a/public/02-blog-page.html
+++ b/public/02-blog-page.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Навес 4 х 8 м из сотового поликарбоната</title>
+		<title>Навес для дома. 7 способов, как украсить участок и сделать жизнь комфортнее (H1)</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -12,7 +12,7 @@
 		<link href="libs/plyr/plyr.css" rel="stylesheet"/>
 		<link href="css/main.min.css" rel="stylesheet"/>
 	</head>
-	<body class="portfolio-page-2">
+	<body class="blog-page">
 		<div class="main-wrapper">
 			<!-- start header-->
 			<header class="header" id="header">
@@ -204,300 +204,13 @@
 								</svg>
 							</a>
 						</div>
+						<div class="col-auto"><span>КАТЕГОРИИ</span></div>
 					</div>
 					<div class="page-head__wrap">
-						<h1>Навес 4 х 8 м из сотового поликарбоната</h1>
+						<h1>Навес для дома. 7 способов, как украсить участок и сделать жизнь комфортнее (H1)</h1>
 					</div>
 				</div>
 			</div>
-			<!-- start sSpecifications-->
-			<section class="sSpecifications section" id="sSpecifications">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-8">
-							<div class="sSpecifications__slider-wrap">
-								<div class="sSpecifications__slider sSpecifications__slider--js swiper">
-									<div class="swiper-wrapper">
-											<div class="sSpecifications__slide swiper-slide">
-												<a class="sSpecifications__img-wrap" href="img/@2x/sSpecifications-md-1.jpg" data-fancybox="sCard-gallery">
-													<!-- picture-->
-													<picture> 
-														<source type="image/avif" srcset="img/@2x/avif/sSpecifications-md-1.avif"/>
-														<source type="image/webp" srcset="img/@2x/webp/sSpecifications-md-1.webp"/><img class="object-fit-js" src="img/@2x/sSpecifications-md-1.jpg" alt="" loading="lazy"/>
-													</picture>
-													<!-- /picture-->
-												</a>
-											</div>
-											<div class="sSpecifications__slide swiper-slide">
-												<a class="sSpecifications__img-wrap" href="img/@2x/sSpecifications-md-2.jpg" data-fancybox="sCard-gallery">
-													<!-- picture-->
-													<picture> 
-														<source type="image/avif" srcset="img/@2x/avif/sSpecifications-md-2.avif"/>
-														<source type="image/webp" srcset="img/@2x/webp/sSpecifications-md-2.webp"/><img class="object-fit-js" src="img/@2x/sSpecifications-md-2.jpg" alt="" loading="lazy"/>
-													</picture>
-													<!-- /picture-->
-												</a>
-											</div>
-											<div class="sSpecifications__slide swiper-slide">
-												<a class="sSpecifications__img-wrap" href="img/@2x/sSpecifications-md-3.jpg" data-fancybox="sCard-gallery">
-													<!-- picture-->
-													<picture> 
-														<source type="image/avif" srcset="img/@2x/avif/sSpecifications-md-3.avif"/>
-														<source type="image/webp" srcset="img/@2x/webp/sSpecifications-md-3.webp"/><img class="object-fit-js" src="img/@2x/sSpecifications-md-3.jpg" alt="" loading="lazy"/>
-													</picture>
-													<!-- /picture-->
-												</a>
-											</div>
-											<div class="sSpecifications__slide swiper-slide">
-												<a class="sSpecifications__img-wrap" href="img/@2x/sSpecifications-md-4.jpg" data-fancybox="sCard-gallery">
-													<!-- picture-->
-													<picture> 
-														<source type="image/avif" srcset="img/@2x/avif/sSpecifications-md-4.avif"/>
-														<source type="image/webp" srcset="img/@2x/webp/sSpecifications-md-4.webp"/><img class="object-fit-js" src="img/@2x/sSpecifications-md-4.jpg" alt="" loading="lazy"/>
-													</picture>
-													<!-- /picture-->
-												</a>
-											</div>
-									</div>
-								</div>
-								<div class="sSpecifications__slider-thumbs sSpecifications__slider-thumbs--js swiper">
-									<div class="swiper-wrapper">
-											<div class="sSpecifications__slide swiper-slide">
-												<div class="sSpecifications__img-wrap sSpecifications__img-wrap--thumbs bg-wrap">
-													<!-- picture-->
-													<picture class="picture-bg"> 
-														<source type="image/avif" srcset="img/@2x/avif/sSpecifications-sm-1.avif"/>
-														<source type="image/webp" srcset="img/@2x/webp/sSpecifications-sm-1.webp"/><img class="object-fit-js" src="img/@2x/sSpecifications-sm-1.jpg" alt="" loading="lazy"/>
-													</picture>
-													<!-- /picture-->
-												</div>
-											</div>
-											<div class="sSpecifications__slide swiper-slide">
-												<div class="sSpecifications__img-wrap sSpecifications__img-wrap--thumbs bg-wrap">
-													<!-- picture-->
-													<picture class="picture-bg"> 
-														<source type="image/avif" srcset="img/@2x/avif/sSpecifications-sm-2.avif"/>
-														<source type="image/webp" srcset="img/@2x/webp/sSpecifications-sm-2.webp"/><img class="object-fit-js" src="img/@2x/sSpecifications-sm-2.jpg" alt="" loading="lazy"/>
-													</picture>
-													<!-- /picture-->
-												</div>
-											</div>
-											<div class="sSpecifications__slide swiper-slide">
-												<div class="sSpecifications__img-wrap sSpecifications__img-wrap--thumbs bg-wrap">
-													<!-- picture-->
-													<picture class="picture-bg"> 
-														<source type="image/avif" srcset="img/@2x/avif/sSpecifications-sm-3.avif"/>
-														<source type="image/webp" srcset="img/@2x/webp/sSpecifications-sm-3.webp"/><img class="object-fit-js" src="img/@2x/sSpecifications-sm-3.jpg" alt="" loading="lazy"/>
-													</picture>
-													<!-- /picture-->
-												</div>
-											</div>
-											<div class="sSpecifications__slide swiper-slide">
-												<div class="sSpecifications__img-wrap sSpecifications__img-wrap--thumbs bg-wrap">
-													<!-- picture-->
-													<picture class="picture-bg"> 
-														<source type="image/avif" srcset="img/@2x/avif/sSpecifications-sm-4.avif"/>
-														<source type="image/webp" srcset="img/@2x/webp/sSpecifications-sm-4.webp"/><img class="object-fit-js" src="img/@2x/sSpecifications-sm-4.jpg" alt="" loading="lazy"/>
-													</picture>
-													<!-- /picture-->
-												</div>
-											</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4">
-							<table>
-								<thead>
-									<tr>
-										<th>
-											<h6>Характеристики</h6>
-										</th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr>
-										<td>Металлические столбы</td>
-										<td>80&times;80&times;3&nbsp;мм (6&nbsp;шт)</td>
-									</tr>
-									<tr>
-										<td>Силовые боковые балки</td>
-										<td>80&times;80&times;3&nbsp;мм </td>
-									</tr>
-									<tr>
-										<td>Металлические фермы</td>
-										<td>60&times;30&times;2&nbsp;мм (4&nbsp;шт)</td>
-									</tr>
-									<tr>
-										<td>Обрешетка (лаги)</td>
-										<td>40&times;20&times;1,5&nbsp;мм</td>
-									</tr>
-									<tr>
-										<td>Форма крыши</td>
-										<td>Арочная</td>
-									</tr>
-									<tr>
-										<td>Материал кровли</td>
-										<td>Сотовый поликарбонат (8&nbsp;мм) &laquo;КарбоGlass Кристалл&raquo;</td>
-									</tr>
-									<tr>
-										<td>Цвет кровли</td>
-										<td>Бронзовый</td>
-									</tr>
-									<tr>
-										<td>Монтаж к земле</td>
-										<td>Заглубление на&nbsp;1200&nbsp;мм с&nbsp;бутованием щебнем</td>
-									</tr>
-								</tbody>
-							</table>
-							<table>
-								<thead>
-									<tr>
-										<th>
-											<h6>Цены и сроки</h6>
-										</th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr>
-										<td>Материалы • Работа</td>
-										<td>123 480 ₽ • 52 920 ₽</td>
-									</tr>
-									<tr>
-										<td>Итого</td>
-										<td>176 400 ₽</td>
-									</tr>
-									<tr>
-										<td>Изготовление • Установка</td>
-										<td>7 дней • 1 день</td>
-									</tr>
-								</tbody>
-							</table><a class="btn btn-primary" href="#">Хочу примерно такой же</a>
-							<button class="btn btn-outline-secondary">Сохранить себе</button>
-						</div>
-					</div>
-				</div>
-			</section>
-			<!-- end sSpecifications-->
-			<!-- start sSimilarAwnings-->
-			<section class="sSimilarAwnings section" id="sSimilarAwnings">
-				<div class="container">
-					<div class="section-title text-center">
-						<h2>Похожие навесы</h2>
-					</div>
-					<div class="row">
-						<div class="col-lg-4">
-							<div class="card"><a href="#"> 
-									<!-- picture-->
-									<picture> 
-										<source type="image/avif" srcset="img/@2x/avif/sProducts-1.avif"/>
-										<source type="image/webp" srcset="img/@2x/webp/sProducts-1.webp"/><img class="object-fit-js" src="img/@2x/sProducts-1.jpg" alt="" loading="lazy"/>
-									</picture>
-									<!-- /picture-->
-									<h4>Навес 4&times;8&nbsp;м из&nbsp;сотового поликарбоната</h4></a>
-								<p>Гарабиты: 6&times;6&nbsp;м &bull; Высота по&nbsp;столбам: 2,4&nbsp;м</p>
-								<h5>Характеристики</h5>
-								<table>
-									<tbody>
-										<tr>
-											<td>Тип</td>
-											<td>навесы для дачи</td>
-										</tr>
-										<tr>
-											<td>Тип навеса</td>
-											<td>полуарочный</td>
-										</tr>
-										<tr>
-											<td>Кровля</td>
-											<td>сотовый поликарбонат</td>
-										</tr>
-										<tr>
-											<td>Каркас</td>
-											<td>еталический</td>
-										</tr>
-									</tbody>
-								</table>
-								<div class="card__more">
-									<p>150 400 ₽</p><a class="btn btn-primary btn-sm" href="#">Подробнее </a>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4">
-							<div class="card"><a href="#"> 
-									<!-- picture-->
-									<picture> 
-										<source type="image/avif" srcset="img/@2x/avif/sProducts-1.avif"/>
-										<source type="image/webp" srcset="img/@2x/webp/sProducts-1.webp"/><img class="object-fit-js" src="img/@2x/sProducts-1.jpg" alt="" loading="lazy"/>
-									</picture>
-									<!-- /picture-->
-									<h4>Навес 4&times;8&nbsp;м из&nbsp;сотового поликарбоната</h4></a>
-								<p>Гарабиты: 6&times;6&nbsp;м &bull; Высота по&nbsp;столбам: 2,4&nbsp;м</p>
-								<h5>Характеристики</h5>
-								<table>
-									<tbody>
-										<tr>
-											<td>Тип</td>
-											<td>навесы для дачи</td>
-										</tr>
-										<tr>
-											<td>Тип навеса</td>
-											<td>полуарочный</td>
-										</tr>
-										<tr>
-											<td>Кровля</td>
-											<td>сотовый поликарбонат</td>
-										</tr>
-										<tr>
-											<td>Каркас</td>
-											<td>еталический</td>
-										</tr>
-									</tbody>
-								</table>
-								<div class="card__more">
-									<p>150 400 ₽</p><a class="btn btn-primary btn-sm" href="#">Подробнее </a>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4">
-							<div class="card"><a href="#"> 
-									<!-- picture-->
-									<picture> 
-										<source type="image/avif" srcset="img/@2x/avif/sProducts-1.avif"/>
-										<source type="image/webp" srcset="img/@2x/webp/sProducts-1.webp"/><img class="object-fit-js" src="img/@2x/sProducts-1.jpg" alt="" loading="lazy"/>
-									</picture>
-									<!-- /picture-->
-									<h4>Навес 4&times;8&nbsp;м из&nbsp;сотового поликарбоната</h4></a>
-								<p>Гарабиты: 6&times;6&nbsp;м &bull; Высота по&nbsp;столбам: 2,4&nbsp;м</p>
-								<h5>Характеристики</h5>
-								<table>
-									<tbody>
-										<tr>
-											<td>Тип</td>
-											<td>навесы для дачи</td>
-										</tr>
-										<tr>
-											<td>Тип навеса</td>
-											<td>полуарочный</td>
-										</tr>
-										<tr>
-											<td>Кровля</td>
-											<td>сотовый поликарбонат</td>
-										</tr>
-										<tr>
-											<td>Каркас</td>
-											<td>еталический</td>
-										</tr>
-									</tbody>
-								</table>
-								<div class="card__more">
-									<p>150 400 ₽</p><a class="btn btn-primary btn-sm" href="#">Подробнее </a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-			<!-- end sSimilarAwnings-->
 			<!-- start sContact-->
 			<section class="sContact section" id="sContact">
 				<div class="container">
