--- a/public/04-reviews.html
+++ b/public/04-reviews.html
@@ -195,10 +195,16 @@
 			</header>
 			<!-- end header-->
 			<div class="page-head">
-				<div class="container"><a href="#">
-						<svg class="icon icon-arrow-left ">
-							<use xlink:href="img/svg/sprite.svg#arrow-left"></use>
-						</svg></a>
+				<div class="container">
+					<div class="page-head__row row">
+						<div class="col-auto">
+							<a class="page-head__arrow-back" href="#">
+								<svg class="icon icon-arrow-left ">
+									<use xlink:href="img/svg/sprite.svg#arrow-left"></use>
+								</svg>
+							</a>
+						</div>
+					</div>
 					<div class="page-head__wrap">
 						<h1>Отзывы</h1>
 						<p>Всего 237 отзывов</p>
