--- a/public/02-blog-page.html
+++ b/public/02-blog-page.html
@@ -204,10 +204,76 @@
 								</svg>
 							</a>
 						</div>
-						<div class="col-auto"><span>КАТЕГОРИИ</span></div>
+						<div class="page-head__col col-auto">
+							<div class="category-menu dropdown">
+								<div class="category-menu__btn dropdown__btn">
+									<svg class="icon icon-categories-btn ">
+										<use xlink:href="img/svg/sprite.svg#categories-btn"></use>
+									</svg><span>Категории</span>
+								</div>
+								<div class="categories dropdown__content">
+									<a class="categories__item active" href="#"><span>Советы <br> и&nbsp;лайфхаки</span>
+										<svg class="icon icon-categories-1 ">
+											<use xlink:href="img/svg/sprite.svg#categories-1"></use>
+										</svg>
+									</a>
+									<a class="categories__item" href="#"><span>Технические <br> детали</span>
+										<svg class="icon icon-categories-2 ">
+											<use xlink:href="img/svg/sprite.svg#categories-2"></use>
+										</svg>
+									</a>
+									<a class="categories__item" href="#"><span>Безопасность <br> и&nbsp;гарантии</span>
+										<svg class="icon icon-categories-3 ">
+											<use xlink:href="img/svg/sprite.svg#categories-3"></use>
+										</svg>
+									</a>
+									<a class="categories__item" href="#"><span>Внешний <br> вид</span>
+										<svg class="icon icon-categories-4 ">
+											<use xlink:href="img/svg/sprite.svg#categories-4"></use>
+										</svg>
+									</a>
+									<a class="categories__item" href="#"><span>Как <br> выбрать</span>
+										<svg class="icon icon-categories-5 ">
+											<use xlink:href="img/svg/sprite.svg#categories-5"></use>
+										</svg>
+									</a>
+									<a class="categories__item" href="#"><span>Примеры <br> Наших работ</span>
+										<svg class="icon icon-categories-6 ">
+											<use xlink:href="img/svg/sprite.svg#categories-6"></use>
+										</svg>
+									</a>
+								</div>
+							</div>
+						</div>
 					</div>
 					<div class="page-head__wrap">
 						<h1>Навес для дома. 7 способов, как украсить участок и сделать жизнь комфортнее (H1)</h1>
+						<div class="info-panel">
+							<div class="row">
+								<div class="col-auto">
+									<div class="info-panel__item info-panel__item--btn"><span>Как выбрать</span>
+									</div>
+								</div>
+								<div class="col-auto">
+									<div class="info-panel__item info-panel__item--btn"><span>15.09.21</span>
+									</div>
+								</div>
+								<div class="col-auto">
+									<div class="info-panel__item info-panel__item--views">
+										<svg class="icon icon-eye ">
+											<use xlink:href="img/svg/sprite.svg#eye"></use>
+										</svg><span>834</span>
+									</div>
+								</div>
+								<div class="col-auto">
+									<div class="info-panel__item info-panel__item--time">
+										<svg class="icon icon-clock ">
+											<use xlink:href="img/svg/sprite.svg#clock"></use>
+										</svg><span>5&nbsp;минут</span>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
