--- a/public/02-blogs.html
+++ b/public/02-blogs.html
@@ -197,7 +197,47 @@
 			<div class="page-head">
 				<div class="container">
 					<div class="page-head__row row">
-						<div class="col-auto"><span>КАТЕГОРИИ</span></div>
+						<div class="page-head__col col-auto">
+							<div class="category-menu dropdown">
+								<div class="category-menu__btn dropdown__btn">
+									<svg class="icon icon-categories-btn ">
+										<use xlink:href="img/svg/sprite.svg#categories-btn"></use>
+									</svg><span>Категории</span>
+								</div>
+								<div class="categories dropdown__content">
+									<a class="categories__item active" href="#"><span>Советы <br> и&nbsp;лайфхаки</span>
+										<svg class="icon icon-categories-1 ">
+											<use xlink:href="img/svg/sprite.svg#categories-1"></use>
+										</svg>
+									</a>
+									<a class="categories__item" href="#"><span>Технические <br> детали</span>
+										<svg class="icon icon-categories-2 ">
+											<use xlink:href="img/svg/sprite.svg#categories-2"></use>
+										</svg>
+									</a>
+									<a class="categories__item" href="#"><span>Безопасность <br> и&nbsp;гарантии</span>
+										<svg class="icon icon-categories-3 ">
+											<use xlink:href="img/svg/sprite.svg#categories-3"></use>
+										</svg>
+									</a>
+									<a class="categories__item" href="#"><span>Внешний <br> вид</span>
+										<svg class="icon icon-categories-4 ">
+											<use xlink:href="img/svg/sprite.svg#categories-4"></use>
+										</svg>
+									</a>
+									<a class="categories__item" href="#"><span>Как <br> выбрать</span>
+										<svg class="icon icon-categories-5 ">
+											<use xlink:href="img/svg/sprite.svg#categories-5"></use>
+										</svg>
+									</a>
+									<a class="categories__item" href="#"><span>Примеры <br> Наших работ</span>
+										<svg class="icon icon-categories-6 ">
+											<use xlink:href="img/svg/sprite.svg#categories-6"></use>
+										</svg>
+									</a>
+								</div>
+							</div>
+						</div>
 						<div class="col-sm">
 							<div class="search-field">
 								<input type="text" name="search" placeholder="Поиск по блогу" aria-label="Search through site content"/>
