--- a/public/03-portfolio.html
+++ b/public/03-portfolio.html
@@ -966,20 +966,34 @@
 				<div class="form-wrap">
 					<form>
 						<div class="text-center">
-							<div class="form-wrap__title form-data h3 ttu">Обратный звонок
-							</div>
-							<p class="after-headline">Заполните заявку и&nbsp;мы&nbsp;с&nbsp;Вами свяжемся в&nbsp;течение 15&nbsp;минут</p>
+							<h4>Вызвать замерщика</h4>
+							<p class="after-headline">Оставьте свой номер телефона, мы&nbsp;вам перезвоним и&nbsp;договоримся о&nbsp;замере</p>
 						</div>
-						<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше Имя" required="required"/> 
+						<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше Имя" required="required"/>
 						</div>
 						<!-- +e.input-wrap-->
-						<button class="form-wrap__btn btn" type="submit"> 
+						<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="+7 ___ ___ __ __" required="required"/>
+						</div>
+						<!-- +e.input-wrap-->
+						<button class="form-wrap__btn btn" type="submit">Отправить
 						</button>
-						<div class="form-wrap__policy">
-							<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox" checked="checked"/><small class="custom-input__text text-secondary">Согласен на обработку и хранение моих персональных данных в соответствии с условиями</small>
-							</label>
+						<div class="form-wrap__agreement">Отправляя заявку, вы&nbsp;даете свое согласие на&nbsp;обработку <a href="#">персональных данных</a> 
 						</div>
 					</form>
+				</div>
+				<div class="modal-win__img-wrap bg-wrap">
+					<!-- picture-->
+					<picture class="picture-bg"> 
+						<source type="image/avif" srcset="img/@2x/avif/modal-bg.avif"/>
+						<source type="image/webp" srcset="img/@2x/webp/modal-bg.webp"/><img class="object-fit-js" src="img/@2x/modal-bg.jpg" alt="" loading="lazy"/>
+					</picture>
+					<!-- /picture-->
+					<!-- picture-->
+					<picture> 
+						<source type="image/avif" srcset="img/@2x/avif/modal-1.avif"/>
+						<source type="image/webp" srcset="img/@2x/webp/modal-1.webp"/><img src="img/@2x/modal-1.png" alt="" loading="lazy"/>
+					</picture>
+					<!-- /picture-->
 				</div>
 			</div>
 		</div>
