--- a/public/02-blog-page.html
+++ b/public/02-blog-page.html
@@ -491,7 +491,7 @@
 					<form>
 						<div class="text-center">
 							<h4>Вызвать замерщика</h4>
-							<p class="after-headline">Оставьте свой номер телефона, мы&nbsp;вам перезвоним и&nbsp;договоримся о&nbsp;замере</p>
+							<p>Оставьте свой номер телефона, мы&nbsp;вам перезвоним и&nbsp;договоримся о&nbsp;замере</p>
 						</div>
 						<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше Имя" required="required"/>
 						</div>
@@ -516,6 +516,35 @@
 			</div>
 		</div>
 		<!-- #modal-call-->
+		<div id="modal-call-reviews" style="display: none">
+			<div class="modal-win modal-win--reviews">
+				<div class="sClientsReviews__wrap">
+					<div class="row">
+						<div class="col-md">
+							<div class="sClientsReviews__profile">
+								<div class="sClientsReviews__profile-content">
+									<div class="sClientsReviews__avatar"></div>
+									<div class="sClientsReviews__info"><span>Клиент</span><span>Игорь</span>
+										<p>МО, г. Дмитров, СНТ &laquo;Квазаровка&raquo;</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md">
+							<audio class="js-player" controls="">
+								<source src="audio/sample.mp3" type="audio/mp3"/>
+							</audio>
+						</div>
+					</div>
+					<div class="modal-win__content">
+						<h4>&laquo;Убрали за&nbsp;собой мусор, соблюдали чистоту&raquo;</h4>
+						<p>Вы&nbsp;купили себе дом! Время обустраивать участок. Есть куча идей для построек: из&nbsp;бревен, кирпичей, металла, дерева и&nbsp;других материалов, и&nbsp;все эти идеи можно воплотить с&nbsp;помощью навеса. В&nbsp;этой статье мы&nbsp;расскажем о&nbsp;7&nbsp;способах, как украсить участок, и&nbsp;сделать жизнь комфортнее под навесом.Вы купили себе дом! Время обустраивать участок. Есть куча идей для построек: из&nbsp;бревен, кирпичей, металла, дерева и&nbsp;других материалов, и&nbsp;все эти идеи можно воплотить с&nbsp;помощью навеса. В&nbsp;этой статье мы&nbsp;расскажем о&nbsp;7&nbsp;способах, как украсить участок, и&nbsp;сделать жизнь комфортнее под навесом.Вы купили себе дом! Время обустраивать участок. Есть куча идей для построек: из&nbsp;бревен, кирпичей, металла, дерева и&nbsp;других материалов, и&nbsp;все эти идеи можно воплотить с&nbsp;помощью навеса. В&nbsp;этой статье мы&nbsp;расскажем о&nbsp;7&nbsp;способах, как украсить участок, и&nbsp;сделать жизнь комфортнее под навесом.</p>
+						<p>Вы&nbsp;купили себе дом! Время обустраивать участок. Есть куча идей для построек: из&nbsp;бревен, кирпичей, металла, дерева и&nbsp;других материалов, и&nbsp;все эти идеи можно воплотить с&nbsp;помощью навеса. В&nbsp;этой статье мы&nbsp;расскажем о&nbsp;7&nbsp;способах, как украсить участок, и&nbsp;сделать жизнь комфортнее под навесом.Вы купили себе дом! Время обустраивать участок. Есть куча идей для построек: из&nbsp;бревен, кирпичей, металла, дерева и&nbsp;других материалов, и&nbsp;все эти идеи можно воплотить с&nbsp;помощью навеса. В&nbsp;этой статье мы&nbsp;расскажем о&nbsp;7&nbsp;способах, как украсить участок, и&nbsp;сделать жизнь комфортнее под навесом.Вы купили себе дом! Время обустраивать участок. Есть куча идей для построек: из&nbsp;бревен, кирпичей, металла, дерева и&nbsp;других материалов, и&nbsp;все эти идеи можно воплотить с&nbsp;помощью навеса. В&nbsp;этой статье мы&nbsp;расскажем о&nbsp;7&nbsp;способах, как украсить участок, и&nbsp;сделать жизнь комфортнее под навесом.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- #modal-call-reviews-->
 		<!-- end modals-->
 		<script src="libs/jquery/jquery.min.js"></script>
 		<script src="libs/@fancyapps/ui/fancybox.umd.js"> </script>
