--- a/public/index.html
+++ b/public/index.html
@@ -196,12 +196,9 @@
 			<!-- end header-->
 			<!-- start headerBlock-->
 			<div class="headerBlock section bg-wrap" id="headerBlock">
-				<!-- picture-->
-				<picture class="picture-bg"> 
-					<source type="image/avif" srcset="img/@2x/avif/headerBlock-bg.avif"/>
-					<source type="image/webp" srcset="img/@2x/webp/headerBlock-bg.webp"/><img class="object-fit-js" src="img/@2x/headerBlock-bg.png" alt="" loading="lazy"/>
-				</picture>
-				<!-- /picture-->
+				<video loading="lazy" preload="auto" no-controls="no-controls" autoplay="autoplay" loop="loop" playsinline="playsinline" muted="muted" poster="img/@2x/webp/video.webp">
+					<source src="video/video-1.mp4" type="video/mp4"/>
+				</video>
 				<div class="container">
 					<div class="row">
 						<div class="headerBlock__col col">
