--- a/public/00-modal.html
+++ b/public/00-modal.html
@@ -199,7 +199,7 @@
 										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-call-measurer">Вызвать замерщика</a></div>
 										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-call-calculation">Получить расчет</a></div>
 										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-call-back">Запросить обратный звонок</a></div>
-										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-call-want">Запросить обратный (хочу навес)</a></div>
+										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-call-want">Запросить обратный звонок (хочу навес)</a></div>
 										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-call-similar">Запросить расчет похожего</a></div>
 										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-call-detailed">Запросить расчет детальный</a></div>
 										<div class="col-auto mb-3"><a class="btn btn-primary link-modal-js" href="#modal-call-excursion">Записаться на экскурсию</a></div>
