--- a/public/02-blog-page.html
+++ b/public/02-blog-page.html
@@ -277,6 +277,11 @@
 					</div>
 				</div>
 			</div>
+			<!-- start sContent-->
+			<section class="sContent section" id="sContent">
+				<div class="container"></div>
+			</section>
+			<!-- end sContent-->
 			<!-- start sContact-->
 			<section class="sContact section" id="sContact">
 				<div class="container">
