02-blog-page in progress

--- a/public/02-blog-page.html
+++ b/public/02-blog-page.html
@@ -196,52 +196,56 @@
 			<!-- end header-->
 			<div class="page-head">
 				<div class="container">
-					<div class="page-head__row row">
-						<div class="col-auto">
-							<a class="page-head__arrow-back" href="#">
-								<svg class="icon icon-arrow-left ">
-									<use xlink:href="img/svg/sprite.svg#arrow-left"></use>
-								</svg>
-							</a>
-						</div>
-						<div class="page-head__col col-auto">
-							<div class="category-menu dropdown">
-								<div class="category-menu__btn dropdown__btn">
-									<svg class="icon icon-categories-btn ">
-										<use xlink:href="img/svg/sprite.svg#categories-btn"></use>
-									</svg><span>Категории</span>
+					<div class="page-head__row page-head__row--fix row">
+						<div class="container">
+							<div class="row">
+								<div class="col-auto">
+									<a class="page-head__arrow-back" href="#">
+										<svg class="icon icon-arrow-left ">
+											<use xlink:href="img/svg/sprite.svg#arrow-left"></use>
+										</svg>
+									</a>
 								</div>
-								<div class="categories dropdown__content">
-									<a class="categories__item active" href="#"><span>Советы <br> и&nbsp;лайфхаки</span>
-										<svg class="icon icon-categories-1 ">
-											<use xlink:href="img/svg/sprite.svg#categories-1"></use>
-										</svg>
-									</a>
-									<a class="categories__item" href="#"><span>Технические <br> детали</span>
-										<svg class="icon icon-categories-2 ">
-											<use xlink:href="img/svg/sprite.svg#categories-2"></use>
-										</svg>
-									</a>
-									<a class="categories__item" href="#"><span>Безопасность <br> и&nbsp;гарантии</span>
-										<svg class="icon icon-categories-3 ">
-											<use xlink:href="img/svg/sprite.svg#categories-3"></use>
-										</svg>
-									</a>
-									<a class="categories__item" href="#"><span>Внешний <br> вид</span>
-										<svg class="icon icon-categories-4 ">
-											<use xlink:href="img/svg/sprite.svg#categories-4"></use>
-										</svg>
-									</a>
-									<a class="categories__item" href="#"><span>Как <br> выбрать</span>
-										<svg class="icon icon-categories-5 ">
-											<use xlink:href="img/svg/sprite.svg#categories-5"></use>
-										</svg>
-									</a>
-									<a class="categories__item" href="#"><span>Примеры <br> Наших работ</span>
-										<svg class="icon icon-categories-6 ">
-											<use xlink:href="img/svg/sprite.svg#categories-6"></use>
-										</svg>
-									</a>
+								<div class="page-head__col col-auto">
+									<div class="category-menu dropdown">
+										<div class="category-menu__btn dropdown__btn">
+											<svg class="icon icon-categories-btn ">
+												<use xlink:href="img/svg/sprite.svg#categories-btn"></use>
+											</svg><span>Категории</span>
+										</div>
+										<div class="categories dropdown__content">
+											<a class="categories__item active" href="#"><span>Советы <br> и&nbsp;лайфхаки</span>
+												<svg class="icon icon-categories-1 ">
+													<use xlink:href="img/svg/sprite.svg#categories-1"></use>
+												</svg>
+											</a>
+											<a class="categories__item" href="#"><span>Технические <br> детали</span>
+												<svg class="icon icon-categories-2 ">
+													<use xlink:href="img/svg/sprite.svg#categories-2"></use>
+												</svg>
+											</a>
+											<a class="categories__item" href="#"><span>Безопасность <br> и&nbsp;гарантии</span>
+												<svg class="icon icon-categories-3 ">
+													<use xlink:href="img/svg/sprite.svg#categories-3"></use>
+												</svg>
+											</a>
+											<a class="categories__item" href="#"><span>Внешний <br> вид</span>
+												<svg class="icon icon-categories-4 ">
+													<use xlink:href="img/svg/sprite.svg#categories-4"></use>
+												</svg>
+											</a>
+											<a class="categories__item" href="#"><span>Как <br> выбрать</span>
+												<svg class="icon icon-categories-5 ">
+													<use xlink:href="img/svg/sprite.svg#categories-5"></use>
+												</svg>
+											</a>
+											<a class="categories__item" href="#"><span>Примеры <br> Наших работ</span>
+												<svg class="icon icon-categories-6 ">
+													<use xlink:href="img/svg/sprite.svg#categories-6"></use>
+												</svg>
+											</a>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -277,17 +281,194 @@
 					</div>
 				</div>
 			</div>
-			<!-- start sContent-->
-			<section class="sContent section" id="sContent">
-				<div class="container"></div>
+			<section class="sBlogPage section" id="sBlogPage">
+				<div class="container">
+					<div class="sBlogPage__preview">
+						<!-- picture-->
+						<picture> 
+							<source type="image/avif" srcset="img/@2x/avif/blog-8.avif"/>
+							<source type="image/webp" srcset="img/@2x/webp/blog-8.webp"/><img src="img/@2x/blog-8.jpg" alt="" loading="lazy"/>
+						</picture>
+						<!-- /picture-->
+						<p>Вы купили себе дом! Время обустраивать участок. Есть куча идей для построек: из бревен, кирпичей, металла, дерева и других материалов, и все эти идеи можно воплотить с помощью навеса. В этой статье мы расскажем о 7 способах, как украсить участок, и сделать жизнь комфортнее под навесом.</p>
+					</div>
+					<div class="content-table">
+						<div class="content-table__title">Содержание
+						</div>
+						<ul>
+							<li><a href="#">Входная группа</a></li>
+							<li><a href="#">Закрытая веранда</a></li>
+							<li><a href="#">Открытая веранда</a></li>
+							<li><a href="#">Навес для автомобиля</a></li>
+							<li><a href="#">Беседка</a></li>
+							<li><a href="#">Игровая зона для детей</a></li>
+							<li><a href="#">Навес для кладовой</a></li>
+						</ul>
+					</div>
+					<div class="blog-page-item">
+						<h2>Входная группа</h2>
+						<div class="row">
+							<div class="col-lg-9">
+								<div class="blog-page-item__caption">Навес над входной группой необходим для защиты крыльца или веранды от дождя, снега и наледи. Чтобы не образовался гололед, на котором легко поскользнуться, а также чтобы входную дверь можно было без проблем открыть, не опасаясь, что это окажется невозможным из-за завалов снега. Также навес над входной группой помогает содержать проход ко входу в дом в чистоте и сухости. Навес из поликарбоната идеально подойдет для такой роли. 
+								</div>
+							</div>
+							<div class="col-lg-9">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/blog-4.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/blog-4.webp"/><img src="img/@2x/blog-4.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</div>
+							<div class="col-lg-3 col-sm-6">
+								<a class="blog-item" href="#">
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/blog-6.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/blog-6.webp"/><img class="object-fit-js" src="img/@2x/blog-6.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture-->
+									<h4>5&nbsp;причин, почему навес необходим практически каждому</h4>
+									<div class="info-panel">
+										<div class="row">
+											<div class="col-auto">
+												<div class="info-panel__item info-panel__item--btn"><span>15.09.21</span>
+												</div>
+											</div>
+											<div class="col-auto">
+												<div class="info-panel__item info-panel__item--views">
+													<svg class="icon icon-eye ">
+														<use xlink:href="img/svg/sprite.svg#eye"></use>
+													</svg><span>834</span>
+												</div>
+											</div>
+											<div class="col-auto">
+												<div class="info-panel__item info-panel__item--time">
+													<svg class="icon icon-clock ">
+														<use xlink:href="img/svg/sprite.svg#clock"></use>
+													</svg><span>5&nbsp;минут</span>
+												</div>
+											</div>
+										</div>
+									</div>
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="blog-page-item">
+						<h2>Закрытая веранда</h2>
+						<div class="row">
+							<div class="col-lg-9">
+								<div class="blog-page-item__caption">Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.
+								</div>
+							</div>
+							<div class="col-lg-9">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/blog-4.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/blog-4.webp"/><img src="img/@2x/blog-4.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</div>
+						</div>
+					</div>
+					<div class="blog-page-item">
+						<h2>Открытая веранда</h2>
+						<div class="row">
+							<div class="col-lg-9">
+								<div class="blog-page-item__caption">Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.
+								</div>
+							</div>
+							<div class="col-lg-9">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/blog-4.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/blog-4.webp"/><img src="img/@2x/blog-4.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</div>
+						</div>
+					</div>
+					<div class="blog-page-item">
+						<h2>Навес для автомобиля</h2>
+						<div class="row">
+							<div class="col-lg-9">
+								<div class="blog-page-item__caption">Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.
+								</div>
+							</div>
+							<div class="col-lg-9">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/blog-4.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/blog-4.webp"/><img src="img/@2x/blog-4.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</div>
+							<div class="col-lg-3 col-sm-6">
+								<div class="adv-item bg-wrap">
+									<!-- picture-->
+									<picture class="picture-bg"> 
+										<source type="image/avif" srcset="img/@2x/avif/adv-item-1.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/adv-item-1.webp"/><img src="img/@2x/adv-item-1.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture-->
+									<div class="adv-item__title">Акция
+									</div>
+									<div class="adv-item__caption">Скидка до 17% на навесы для&nbsp;автомобиля
+									</div>
+									<a class="adv-item__btn" href="#">Подробнее
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="blog-page-item">
+						<h2>Беседка</h2>
+						<div class="row">
+							<div class="col-lg-9">
+								<div class="blog-page-item__caption">Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.
+								</div>
+							</div>
+							<div class="col-lg-9">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/blog-4.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/blog-4.webp"/><img src="img/@2x/blog-4.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</div>
+						</div>
+					</div>
+					<div class="blog-page-item">
+						<h2>Игровая зона для детей (h2)</h2>
+						<div class="row">
+							<div class="col-lg-9">
+								<div class="blog-page-item__caption">Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.
+								</div>
+							</div>
+							<div class="col-lg-9">
+								<h3>Игровая зона для детей (h3)</h3>
+								<h4>Игровая зона для детей (h4)</h4>
+								<h5>Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха. (h5)</h5>
+								<div class="blog-page-item__mini-text">Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/blog-4.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/blog-4.webp"/><img src="img/@2x/blog-4.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</div>
+						</div>
+					</div>
+				</div>
 			</section>
-			<!-- end sContent-->
 			<!-- start sContact-->
 			<section class="sContact section" id="sContact">
 				<div class="container">
 					<div class="section-title text-center">
 						<h4>Контакты</h4>
-						<h2>Позвоните или посетите наш офис на&nbsp;производстве</h2>
+						<h2>Позвоните или посетите наш офис&nbsp;на&nbsp;производстве</h2>
 					</div>
 					<div class="sContact__row row">
 						<div class="col-lg-7 col-xxl-8">
