--- a/public/03-portfolio.html
+++ b/public/03-portfolio.html
@@ -889,7 +889,7 @@
 				</div>
 			</section>
 			<!-- end sContact-->
-			<div class="section-wrapper">
+			<div class="section-wrapper section-wrapper--footer">
 				<footer class="footer">
 					<div class="container">
 						<div class="row">
