--- a/public/02-blog-page.html
+++ b/public/02-blog-page.html
@@ -412,7 +412,7 @@
 				</div>
 			</section>
 			<!-- end sContact-->
-			<div class="section-wrapper">
+			<div class="section-wrapper section-wrapper--footer">
 				<footer class="footer">
 					<div class="container">
 						<div class="row">
