02-blog-page in work

--- a/public/02-blog-page.html
+++ b/public/02-blog-page.html
@@ -461,6 +461,37 @@
 							</div>
 						</div>
 					</div>
+					<div class="blog-page-item">
+						<h2>Навес для кладовой</h2>
+						<div class="row">
+							<div class="col-lg-9">
+								<div class="blog-page-item__caption">Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.
+								</div>
+							</div>
+							<div class="col-lg-9">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/blog-4.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/blog-4.webp"/><img src="img/@2x/blog-4.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</div>
+						</div>
+					</div>
+					<div class="recall-item bg-wrap">
+						<!-- picture-->
+						<picture class="picture-bg"> 
+							<source type="image/avif" srcset="img/@2x/avif/recall-item.avif"/>
+							<source type="image/webp" srcset="img/@2x/webp/recall-item.webp"/><img src="img/@2x/recall-item.jpg" alt="" loading="lazy"/>
+						</picture>
+						<!-- /picture-->
+						<div class="recall-item__title">Обратная связь
+						</div>
+						<div class="recall-item__caption">Задайте свой<br>вопрос в Вотсапе
+						</div>
+						<a class="recall-item__btn" href="#">Написать
+						</a>
+					</div>
 				</div>
 			</section>
 			<!-- start sContact-->
