--- a/public/02-blog-page.html
+++ b/public/02-blog-page.html
@@ -478,18 +478,18 @@
 							</div>
 						</div>
 					</div>
-					<div class="recall-item bg-wrap">
+					<div class="banner-item bg-wrap">
 						<!-- picture-->
 						<picture class="picture-bg"> 
-							<source type="image/avif" srcset="img/@2x/avif/recall-item.avif"/>
-							<source type="image/webp" srcset="img/@2x/webp/recall-item.webp"/><img src="img/@2x/recall-item.jpg" alt="" loading="lazy"/>
+							<source type="image/avif" srcset="img/@2x/avif/banner-item.avif"/>
+							<source type="image/webp" srcset="img/@2x/webp/banner-item.webp"/><img src="img/@2x/banner-item.jpg" alt="" loading="lazy"/>
 						</picture>
 						<!-- /picture-->
-						<div class="recall-item__title">Обратная связь
+						<div class="banner-item__title">Обратная связь
 						</div>
-						<div class="recall-item__caption">Задайте свой<br>вопрос в Вотсапе
+						<div class="banner-item__caption">Задайте свой<br>вопрос в Вотсапе
 						</div>
-						<a class="recall-item__btn" href="#">Написать
+						<a class="banner-item__btn" href="#">Написать
 						</a>
 					</div>
 				</div>
